--- a/main_app/templates/fishes/index2.html
+++ b/main_app/templates/fishes/index2.html
@@ -4,6 +4,7 @@
 <h1>Fish List</h1>
 
 {% for fish in fishes %}
+<a href="{% url 'detail' fish.id %}">
   <div class="card">
     <div class="card-content">
       <span class="card-title">{{ fish.name }}</span>
@@ -16,6 +17,7 @@
       {% endif %}
     </div>
   </div>
+  </a>
 {% endfor %}
 
 {% endblock %}
