--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -11,4 +11,9 @@ main {
 footer.page-footer {
   padding-top: 0;
   text-align: right;
+  background-color: skyblue;
+}
+
+nav {
+  background-color: skyblue;
 }
