--- a/main_app/templates/fishes/detail.html
+++ b/main_app/templates/fishes/detail.html
@@ -13,6 +13,10 @@
     {% else %}
       <p>Age: Baby Fish</p>
     {% endif %}
+    <div class="card-action">
+      <a href="{% url 'fishes_update' fish.id %}">Edit</a>
+      <a href="{% url 'fishes_delete' fish.id %}">Delete</a>
+    </div>
   </div>
 </div>
 
