--- a/main_app/templates/fishes/detail.html
+++ b/main_app/templates/fishes/detail.html
@@ -3,21 +3,64 @@
 
 <h1>Fish Details</h1>
 
-<div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ fish.name }}</span>
-    <p>Breed: {{ fish.breed }}</p>
-    <p>Description: {{ fish.description }}</p>
-    {% if fish.age > 0 %}
-      <p>Age: {{ fish.age }}</p>
-    {% else %}
-      <p>Age: Baby Fish</p>
-    {% endif %}
-    <div class="card-action">
-      <a href="{% url 'fishes_update' fish.id %}">Edit</a>
-      <a href="{% url 'fishes_delete' fish.id %}">Delete</a>
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ fish.name }}</span>
+        <p>Breed: {{ fish.breed }}</p>
+        <p>Description: {{ fish.description }}</p>
+        {% if fish.age > 0 %}
+          <p>Age: {{ fish.age }}</p>
+        {% else %}
+          <p>Age: Baby Fish</p>
+        {% endif %}
+      </div>
+      <div class="card-action">
+        <a href="{% url 'fishes_update' fish.id %}">Edit</a>
+        <a href="{% url 'fishes_delete' fish.id %}">Delete</a>
+      </div>
     </div>
+  </div>
+  <div class="col s6">
+    <form action="{% url 'add_feeding' fish.id %}" method="post">
+      {% csrf_token %}
+      {{ feeding_form.as_p }}
+      <input type="submit" class="btn" value="Add Feeding">
+    </form>
+    <br>
+    {% if fish.fed_for_today %}
+      <div class="card-panel teal-text center-align">{{fish.name}} has been fed all meals for today</div>
+    {% else %}
+      <div class="card-panel red-text center-align">{{fish.name}} might be hungry</div>
+    {% endif %}
+    <table class="striped">
+      <thead>
+        <tr><th>Date</th><th>Meal</th></tr>
+      </thead>
+      <tbody>
+        {% for feeding in fish.feeding_set.all %}
+          <tr>
+            <td>{{feeding.date}}</td>
+            <td>{{feeding.get_meal_display}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
 </div>
 
+<script>
+  const dateEl = document.getElementById('id_date');
+  M.Datepicker.init(dateEl, {
+    format: 'yyyy-mm-dd',
+    defaultDate: new Date(),
+    setDefaultDate: true,
+    autoClose: true
+  });
+
+  // add additional JS to initialize select below
+  const selectEl = document.getElementById('id_meal');
+  M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
