--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,9 +20,10 @@
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'rods_create' %}">Add a Rod</a></li>
+          <li><a href="{% url 'rods_index' %}">View All Rods</a></li>
           <li><a href="{% url 'fishes_create' %}">Add a Fish</a></li>
           <li><a href="{% url 'index' %}">View All My Fishes</a></li>
-          <li><a href="{% url 'toyIndex' %}">View All My Toys</a></li>
         </ul>
       </div>
     </nav>
