--- a/main_app/templates/fishes/detail.html
+++ b/main_app/templates/fishes/detail.html
@@ -48,6 +48,46 @@
       </tbody>
     </table>
   </div>
+
+  <hr />
+  <div class="row">
+    <div class="col s6">
+      <h3>{{ fish.name }}'s Rods</h3>
+      {% if fish.rods.count %} {% for rod in fish.rods.all %}
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">
+            A <span>{{ rod.typeOfRod }}</span> {{ rod.name }}
+          </span>
+        </div>
+      </div>
+      {% endfor %} {% else %}
+      <h5>No Rods :(</h5>
+      {% endif %}
+    </div>
+	<div class="col s6">
+		<h3>Available Rods</h3>
+		{% if rods.count %}
+		  {% for rod in rods.all %}
+			<div class="card">
+			  <div class="card-content">
+				<span class="card-title">
+				  A <span>{{ rod.typeOfRod }} :</span> {{ rod.name }}
+				</span>
+			  </div>
+			  <div class="card-action">
+				<form action="{% url 'assoc_rod' fish.id rod.id %}" method="post">
+				  {% csrf_token %}
+				  <button type="submit" class="btn">Add</button>
+				</form>
+			  </div>
+			</div>
+		  {% endfor %}
+		{% else %}
+		  <h5>{{fish.name}} Already Has All Rods Available</h5>
+		{% endif %}
+	  </div>
+
 </div>
 
 <script>
